page stopped shifting

--- a/power-coders-app/src/Components/App/App.css
+++ b/power-coders-app/src/Components/App/App.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
-
+body {
+  height: 100vh;
+  width: 100vw;
+}
 body, html {
     font-family: 'Oswald', sans-serif;
     -moz-osx-font-smoothing: grayscale;
@@ -12,17 +15,24 @@ body, html {
   }
 
   #page-wrap {
-	/* padding-bottom: 10px;
-	padding-top: 10px; */
+	padding-bottom: 10px;
+	padding-top: 10px;
   }
 
+  #root {
+    width: 100%;
+    height: 100%;
+  }
 .App {
+  width: 100%;
+  height: 100%;
 	text-align: center;
   font-family: 'Oswald';
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  background-color: #849AAF;
 }
 
 .App-logo {
@@ -50,14 +60,6 @@ body, html {
   color: white;
 }
 
-main {
-  max-height: 60%;
-  min-height: 60%;
-}
-.carousel {
-  max-height: 60%;
-  min-height: 60%;
-}
 .App-link {
 	color: #61dafb;
 }
