--- a/power-coders-app/src/Components/Carousel/WeeksResource/index.css
+++ b/power-coders-app/src/Components/Carousel/WeeksResource/index.css
@@ -3,10 +3,6 @@
     /* background-color: blue; */
   }
   
-  .consistant {
-    max-height: 20%;
-    min-height: 20%;
-  }
   .row {
     display: flex;
   }
@@ -18,6 +14,7 @@
     /* height: 300px; Should be removed. Only for demonstration */
   }
   .column2 {
+    object-fit: contain;
     flex: 50%;
     padding-top: 200px;
     background-color: #849AAF;
